create and edit project using the same form

--- a/src/main/resources/templates/projects/detail.html
+++ b/src/main/resources/templates/projects/detail.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Task Management</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
-<h1 th:text=" 'Name: ' + ${project.name}" ></h1>
-<ul>
-    <li th:text=" 'id: ' + ${project.id}" ></li>
-    <li th:text=" 'Created: ' + ${project.dateCreated}" ></li>
-</ul>
+    <div class="container">
+        <div th:replace="~{fragments/menu :: menu}">&nbsp;</div>
+        <h1 th:text=" 'Name: ' + ${project.name}" ></h1>
+        <ul>
+            <li th:text=" 'id: ' + ${project.id}" ></li>
+            <li th:text=" 'Created: ' + ${project.dateCreated}" ></li>
+        </ul>
+        <a class="btn btn-primary" role="button" href="#" th:href="@{/project/{id}/edit(id=${project.id})}">Edit</a>
+    </div>
+
 </body>
 </html>
