--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -13,20 +13,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link"  th:href="@{/project}">Projects</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Projects
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item"  th:href="@{/project}">List</a></li>
-                            <li><a class="dropdown-item" th:href="@{/project/new}">Create</a></li>
-                        </ul>
-                    </li>
+
+                    <li class="nav-item"><a class="nav-link"   th:href="@{/project}">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link"  th:href="@{/project/new}">Create</a></li>
                 </ul>
             </div>
         </div>
